--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Education is the process of facilitating learning, or the acquisition of knowledge, skills, values, morals, beliefs, and habits. Educational methods include teaching, training, storytelling, discussion and directed research. Education frequently takes place under the guidance of educators, however learners can also educate themselves. Education can take place in formal or informal settings and any experience that has a formative effect on the way one thinks, feels, or acts may be considered educational.</p>
     <p>There are movements for education reforms, such as for improving quality and efficiency of education towards applicable relevance in the students' lives and efficient problem solving in modern or future society at large or for evidence-based education methodologies. A right to education has been recognized by some governments and the United Nations.[a] Global initiatives aim at achieving the Sustainable Development Goal 4, which promotes quality education for all. In most regions, education is compulsory up to a certain age.</p>
     <h2>Are You Intrested To Join This Group</h2>
-    <form class="" action="edu.html" method="post">
+    <form class="" action="edu.html" method="get">
         <label for="name">Enter your Name: </label><br>
         <input id="name" type="text" name="name" value="" required><br>
         <label for="mail">Enter your Mail:</label><br>
